--- a/css/default.css
+++ b/css/default.css
@@ -1,1 +1,12 @@
+body{
+  background-color:lightgrey;
+  margin:5px;
+}
 
+#text-shadow{
+  padding:0 40px;
+  font-size:30px;
+}
+
+.grow{color:white;
+      text-shadow:0px 0px 5px gray;}
