--- a/css/default.css
+++ b/css/default.css
@@ -10,3 +10,8 @@ body{
 
 .grow{color:white;
       text-shadow:0px 0px 5px gray;}
+      
+#box-shadow{
+  font-size:30px;
+}
+.box-drop_shadow{box-shadow:2px 2px　5px gray;      padding:5px;margin:20px;}
