--- a/css/default.css
+++ b/css/default.css
@@ -14,4 +14,6 @@ body{
 #box-shadow{
   font-size:30px;
 }
-.box-drop_shadow{box-shadow:2px 2px　5px gray;      padding:5px; margin:20px;}
+.box-drop_shadow{
+  box-shadow:2px 2px 5px gray;   padding:5px; margin:20px;
+}
