--- a/css/default.css
+++ b/css/default.css
@@ -56,7 +56,7 @@ body{
   text-align:center;
   padding:45px 0px;
   margin:20px;
-  background-color: mediumspsinggreen;
+  background-color: mediumspringgreen;
 }
 
 .rotate{
