--- a/css/default.css
+++ b/css/default.css
@@ -66,7 +66,7 @@ body{
 p.transition{
   margin:10px;
 }
-p.trabsition a{
+p.transition a{
   background-color:mediumseagreen;
   color:white;
   font-size:30px;
